--- a/fronted/step5.html
+++ b/fronted/step5.html
@@ -295,7 +295,7 @@
     `;
 
     // Send data to backend API
-    fetch('/api/predict', {
+    fetch('https://diabetic-retinopathy-195u.onrender.com/api/predict', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
