--- a/fronted/step1.html
+++ b/fronted/step1.html
@@ -53,6 +53,7 @@
         <option value="" disabled selected>Please select</option>
         <option>Type 1</option>
         <option>Type 2</option>
+        <option>Type 3</option>
         <option>Gestational</option>
         <option>Not Sure</option>
       </select>
