--- a/fronted/step3.html
+++ b/fronted/step3.html
@@ -14,6 +14,8 @@
     .row { display:flex; gap:10px; }
     .unit-toggle { margin:10px 0; }
     .bmi-display { margin-top:12px; font-size:14px; font-weight:bold; }
+    .vitals-section {
+     margin-top: 25px;padding-top: 15px;}
   </style>
 </head>
 <body>
@@ -29,8 +31,8 @@
   <!-- form-->
   <form id="drForm" onsubmit="return false;">
     
-    <!--Step 11:smoking status? and a dropdown for users to select smoking habits-->
-    <label>11)What is your smoking status?
+    <!--Step 12:smoking status? and a dropdown for users to select smoking habits-->
+    <label>12)What is your smoking status?
       <select id="smoking">
         <option value="" selected disabled>Please select</option>
         <option>Never Smoked</option>
@@ -38,6 +40,12 @@
         <option>Current Smoker</option>
       </select>
     </label>
+
+
+    <!--Step 13: Enter your vitals with unit selection-->
+    <div class="vitals-section">
+      <div class="vitals-label">13) Enter your vitals (Height and Weight)</div>
+    </div>
 
     <!--Unit System Selection, Users can toggle between Metric and Imperial-->
     <div class="unit-toggle">
@@ -47,7 +55,7 @@
 
     <!--Metric input field-->
     <div id="metric-fields" class="row">
-      <label>12)Height (cm): <input type="number" id="height_cm" min="50" max="250" step="1" placeholder="cm"></label>
+      <label>Height (cm): <input type="number" id="height_cm" min="50" max="250" step="1" placeholder="cm"></label>
       <label>Weight (kg): <input type="number" id="weight_kg" min="10" max="300" step="0.1" placeholder="kg"></label>
     </div>
 
