--- a/fronted/result.html
+++ b/fronted/result.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>糖尿病视网膜病变风险评估结果</title>
+  <title>Diabetic retinopathy risk assessment results</title>
   <style>
     /* 与 step5.html 相同的 CSS 样式，确保视觉一致性 */
     body { font-family: Arial, sans-serif; background: #f6f8fb; padding: 20px; }
